// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/get-project-content matches a project structure 1`] = `
Object {
  "basePath": "",
  "collections": Array [
    Object {
      "fragmentCollectionId": "sample-collection",
      "fragmentCompositions": Array [],
      "fragments": Array [
        Object {
          "configuration": "{
  \\"fieldSets\\": []
}
",
          "css": ".fragment { color: inherit; }
",
          "html": "<div>Fragment</div>
",
          "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
          "metadata": Object {
            "configurationPath": "configuration.json",
            "cssPath": "sample-fragment.css",
            "htmlPath": "sample-fragment.html",
            "jsPath": "sample-fragment.js",
            "name": "Sample component fragment name",
            "type": "component",
          },
          "slug": "sample-component-fragment",
        },
        Object {
          "configuration": "{
  \\"fieldSets\\": []
}
",
          "css": ".fragment { color: inherit; }
",
          "html": "<div>Fragment</div>
",
          "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
          "metadata": Object {
            "configurationPath": "configuration.json",
            "cssPath": "sample-fragment.css",
            "htmlPath": "sample-fragment.html",
            "jsPath": "sample-fragment.js",
            "name": "Sample fragment name",
          },
          "slug": "sample-fragment",
        },
        Object {
          "configuration": "{
  \\"fieldSets\\": []
}
",
          "css": ".fragment { color: inherit; }
",
          "html": "<div>Fragment</div>
",
          "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
          "metadata": Object {
            "configurationPath": "configuration.json",
            "cssPath": "sample-fragment.css",
            "htmlPath": "sample-fragment.html",
            "jsPath": "sample-fragment.js",
            "name": "Sample section fragment name",
            "type": "section",
          },
          "slug": "sample-section-fragment",
        },
      ],
      "metadata": Object {
        "description": "Sample collection description",
        "name": "Sample collection name",
      },
      "slug": "sample-collection",
    },
  ],
  "project": Object {
    "name": "sample-project-content",
  },
}
`;

exports[`utils/get-project-content matches a project structure 2`] = `
Object {
  "basePath": "",
  "collections": Array [
    Object {
      "fragmentCollectionId": "sample-collection",
      "fragmentCompositions": Array [],
      "fragments": Array [
        Object {
          "configuration": "{
  \\"fieldSets\\": []
}
",
          "css": ".fragment { color: inherit; }
",
          "html": "<div>Fragment</div>
",
          "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
          "metadata": Object {
            "configurationPath": "configuration/configuration.json",
            "cssPath": "c/s/s/sample-fragment.css",
            "htmlPath": "h/t/m/l/sample-fragment.html",
            "jsPath": "j/s/sample-fragment.js",
            "name": "Sample fragment name",
          },
          "slug": "sample-fragment",
        },
      ],
      "metadata": Object {
        "description": "Sample collection description",
        "name": "Sample collection name",
      },
      "slug": "sample-collection",
    },
  ],
  "project": Object {
    "name": "sample-project-with-custom-paths",
  },
}
`;

exports[`utils/get-project-content matches a project structure 3`] = `
Object {
  "basePath": "",
  "collections": Array [
    Object {
      "fragmentCollectionId": "sample-collection",
      "fragmentCompositions": Array [],
      "fragments": Array [
        Object {
          "configuration": "",
          "css": ".fragment { color: inherit; }
",
          "html": "<div>Fragment</div>
",
          "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
          "metadata": Object {
            "cssPath": "sample-fragment.css",
            "htmlPath": "sample-fragment.html",
            "jsPath": "sample-fragment.js",
            "name": "Sample fragment name",
          },
          "slug": "sample-fragment",
        },
      ],
      "metadata": Object {
        "description": "Sample collection description",
        "name": "Sample collection name",
      },
      "slug": "sample-collection",
    },
  ],
  "project": Object {
    "name": "sample-project-without-fragment-configuration",
  },
}
`;
